# gen3_backup

src/RFT_Sensor_Serial/: CMakeLists.txt
src/RFT_Sensor_Serial/include/: RFT_COM.h
src/RFT_Sensor_Serial/src/: RFT_COM.cpp  main.cpp  main_2.cpp
src/Take_Value/: CMakeLists.txt  package.xml
src/Take_Value/src/: main_read.cpp  main_read_1.cpp
src/ros_kortex/dual_api_control/: CMakeLists.txt
src/ros_kortex/dual_api_control/build-gcc-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  conaninfo.txt
src/ros_kortex/dual_api_control/build-gcc-release/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.txt
src/ros_kortex/dual_api_control/include/: LowPassFilter_2.hpp  LowPassFilter_3.hpp  chainexternalwrenchestimator.hpp  chainfdsolver.hpp  chainidsolver_recursive_newton_euler.hpp  constants.hpp  dynamics_controller.hpp  kinova_mediator_L.hpp  kinova_mediator_R.hpp  robot_mediator.hpp
src/ros_kortex/dual_api_control/src/controllers/: Dual_move_assist_v2.cpp  main_single_kinova.cpp  single_move.cpp
src/ros_kortex/dual_api_control/src/urdf/: gen3_urdf_6dof.urdf  gen3_urdf_7dof.urdf
src/ros_kortex/dual_api_control/src/util/: LowPassFilter_2.cpp  LowPassFilter_3.cpp  chainidsolver_recursive_newton_euler.cpp  constants.cpp  dynamics_controller.cpp  kinova_mediator_L.cpp  kinova_mediator_R.cpp
src/ros_kortex/dual_interface/: CMakeLists (copy).txt  CMakeLists.txt  package.xml
src/ros_kortex/dual_interface/include/dual_interface/: constants.hpp
src/ros_kortex/dual_interface/src/: dual_node.cpp
src/ros_kortex/dual_interface/src/robot/: constants.cpp  kinova_mediator_L.cpp  kinova_mediator_R.cpp
src/ros_kortex/kinova_api_control/: CMakeLists.txt  utilities.cpp
src/ros_kortex/kinova_api_control/build-gcc-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt
src/ros_kortex/kinova_api_control/build-gcc-release/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.cmake
src/ros_kortex/kinova_api_control/src/Kinematics/: compute-kinematics.cpp
src/ros_kortex/kinova_api_control/src/Test/: Dual_move_admit.cpp  Dual_move_assist_v1.cpp  Dual_move_filter.cpp  Dual_set.cpp  single_move.cpp
src/ros_kortex/kinova_interface/: CMakeLists.txt  package.xml
src/ros_kortex/kinova_interface/src/: apimove_test.cpp  kinova_move.cpp  kinova_move_admit.cpp  kinova_move_admit2.cpp  kinova_move_ft.cpp  move_low_test.cpp  move_low_test_one.cpp  move_low_test_one_fail.cpp
src/ros_kortex/kinova_interface/src/low_move/: move_low1.cpp
src/ros_kortex/kortex_api/kortex-master/api_cpp/examples/102-High_level_movement/: 01-move_angular_and_cartesian.cpp
src/ros_kortex/kortex_api/kortex-master/api_cpp/examples/200-Actuator_low_level_control/: 01-actuator_low_level_velocity_control.cpp
src/ros_kortex/kortex_description/arms/gen3/7dof/urdf/: gen3_macro.xacro
src/ros_kortex/kortex_description/arms/gen3/dualgen/: gen3L_macro.xacro  gen3R_macro.xacro
src/ros_kortex/kortex_description/multiple_robots/: kortex_dual_robots.xacro
src/ros_kortex/kortex_description/robots/: gen3_dual.xacro  kortex_robot.xacro  kortex_robotR.xacro
src/ros_kortex/kortex_driver/launch/: kortex_arm_driver.launch  kortex_arm_driverdual.launch  kortex_driver.launch  kortex_driver2.launch  kortex_driverL.launch  kortex_dual_driver.launch  kortex_dual_driver2.launch
src/ros_kortex/kortex_examples/src/actuator_config/: example_actuator_configuration.cpp
src/ros_kortex/kortex_examples/src/full_arm/: example_full_arm_movement.cpp
src/ros_kortex/kortex_move_it_config/dual_move_it_config/: CMakeLists.txt  package.xml
src/ros_kortex/kortex_move_it_config/dual_move_it_config/config/: kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/ros_kortex/kortex_move_it_config/dual_move_it_config/config/6dof/: default_joint_limits.yaml  gen3.srdf.xacro  hard_joint_limits.yaml  right_gen3.srdf.xacro  ros_controllers.yaml
src/ros_kortex/kortex_move_it_config/dual_move_it_config/config/7dof/: Dualgen3.srdf.xacro  default_joint_limits.yaml  fake_controllers.yaml  hard_joint_limits.yaml  ros_controllers (copy).yaml
src/ros_kortex/kortex_move_it_config/dual_move_it_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  dualgen3_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
